--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,28 @@
             <groupId>com.sendgrid</groupId>
             <artifactId>sendgrid-java</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.cloud.dataflow/google-cloud-dataflow-java-sdk-all -->
+		<dependency>
+		    <groupId>com.google.cloud.dataflow</groupId>
+		    <artifactId>google-cloud-dataflow-java-sdk-all</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-sqladmin -->
+		<dependency>
+		    <groupId>com.google.apis</groupId>
+		    <artifactId>google-api-services-sqladmin</artifactId>
+		    <version>v1beta4-rev52-1.23.0</version>
+		</dependency>
+
+	    <dependency> <!-- Only used locally -->
+		  <groupId>mysql</groupId>
+		  <artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>com.google.cloud.sql</groupId>
+		  <artifactId>mysql-socket-factory</artifactId>
+		  <version>1.0.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
